prevented screen from overflowing. Added js4.

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background: linear-gradient(to right, #FAD961, #F76B1C);
+}
+
 
 #heading {
     font-size: 2em;
@@ -70,6 +74,12 @@
     width: 80%;
     border-radius: 10px;
     border: solid black 2px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    font-size: 4em;
+    font-family:'Courier New', Courier, monospace;
+    overflow: hidden;
 }
 
 #screen-container {
